--- a/src/app/features/expenses/form/expense-form.component.scss
+++ b/src/app/features/expenses/form/expense-form.component.scss
@@ -665,6 +665,8 @@
   color: #10b981 !important;
   font-weight: 600;
   font-size: 16px;
+  margin-right: 8px !important;
+  padding-right: 4px !important;
 }
 
 // Loading spinner
